test_regress/t/t_var_rsvd_bad.out
%Warning-SYMRSVDWORD: t/t_var_rsvd_port.v:12:10: Symbol matches C++ keyword: 'bool'
   input bool;   
         ^~~~
                      ... Use "/* verilator lint_off SYMRSVDWORD */" and lint_on around source to disable this message.
%Warning-SYMRSVDWORD: t/t_var_rsvd_port.v:15:9: Symbol matches C++ keyword: 'switch'
                                              : ... In instance t
   reg  switch /*verilator public*/ ;     
        ^~~~~~
%Error: Exiting due to
